kube/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: front
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 4000 
  selector:
    name: web-${TARGET_ROLE}
  type: ClusterIP
