kube/web/test-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-test-green
  namespace: front
spec:
  ports:
    - name: web
      port: 80
      nodePort: 32000
      protocol: TCP
      targetPort: 4000
  selector:
    name: web-green
  type: NodePort
